@@ -1,6 +1,3 @@
-// честно не помню откуда это сообщение, возможно когда через тг скидывал с одного компа на домашний мог появиться когда и открывал файл
-// просто на моем маке какие-то проблемы с гитом и вот делаю спринт через него, а выкладываю через другой
-
 package test;
 
 import java.util.List;
@@ -14,6 +11,12 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.time.Duration;
+import java.time.LocalDateTime;
+import manager.TimeIntersectionException;
+
+import static org.junit.jupiter.api.Assertions.*;
+
 class TaskManagerTest {
     private TaskManager manager;
 
@@ -21,7 +24,7 @@ class TaskManagerTest {
     }
 
     @BeforeEach
-    void beforeEach() {
+    void beforeEach() throws Exception {
         this.manager = Managers.getDefault();
         Task task1 = new Task("Test task", "Description", 1, Status.NEW);
         Task task2 = new Task("Test task1", "Description1", 2, Status.NEW);
@@ -59,30 +62,30 @@ class TaskManagerTest {
     }
 
     @Test
-    void testTasksEqualityById() {
+    void testTasksEqualityById() throws Exception {
         Task testTask = new Task("Test epic1", "Description1", 13, Status.NEW);
         this.manager.createTask(testTask);
-        Assertions.assertEquals(testTask, this.manager.getTaskById(testTask.getId()));
+        assertEquals(testTask, this.manager.getTaskById(testTask.getId()));
     }
 
     @Test
-    void testSubtaskEqualityById() {
+    void testSubtaskEqualityById() throws Exception {
         Epic testEpic = new Epic("Test epic", "Description", 14);
         this.manager.createEpic(testEpic);
         Subtask subtask = new Subtask("Test subtask", "Description", 15, Status.NEW, testEpic.getId());
         this.manager.createSubtask(subtask);
-        Assertions.assertEquals(subtask, this.manager.getSubtaskById(subtask.getId()));
+        assertEquals(subtask, this.manager.getSubtaskById(subtask.getId()));
     }
 
     @Test
     void testEpicEqualityById() {
         Epic testEpic = new Epic("Test epic1", "Description1", 16);
         this.manager.createEpic(testEpic);
-        Assertions.assertEquals(testEpic, this.manager.getEpicById(testEpic.getId()));
+        assertEquals(testEpic, this.manager.getEpicById(testEpic.getId()));
     }
 
     @Test
-    void checkForIdConflicts() {
+    void checkForIdConflicts() throws Exception {
         Task testTask1 = new Task("Test task", "Description", 17, Status.NEW);
         Task testTask2 = new Task("Test task1", "Description1", 18, Status.NEW);
         this.manager.createTask(testTask1);
@@ -91,62 +94,62 @@ class TaskManagerTest {
     }
 
     @Test
-    void checkHistoryManagerSavesTaskVersions() {
+    void checkHistoryManagerSavesTaskVersions() throws Exception {
         Task checkTask = new Task("Test task", "Description", 19, Status.NEW);
         this.manager.createTask(checkTask);
         this.manager.getTaskById(checkTask.getId());
         Task updatedTask = new Task("Test task", "Description", checkTask.getId(), Status.IN_PROGRESS);
         this.manager.updateTask(updatedTask);
         this.manager.getTaskById(updatedTask.getId());
-        Assertions.assertEquals(checkTask, this.manager.getHistory().getFirst());
+        assertEquals(checkTask, this.manager.getHistory().get(0));
     }
 
     @Test
-    void addNewTask() {
+    void addNewTask() throws Exception {
         Task task = new Task("Test task", "Description", 20, Status.NEW);
         this.manager.createTask(task);
         Task savedTask = this.manager.getTaskById(task.getId());
         Assertions.assertNotNull(savedTask, "Задача не найдена.");
-        Assertions.assertEquals(task, savedTask, "Задачи не совпадают.");
+        assertEquals(task, savedTask, "Задачи не совпадают.");
         List<Task> tasks = this.manager.getAllTasks();
         Assertions.assertNotNull(tasks, "Задачи не возвращаются.");
         Assertions.assertTrue(tasks.contains(task), "Задача не найдена в списке.");
     }
 
     @Test
-    void addNewSubtask() {
+    void addNewSubtask() throws Exception {
         Epic epic = new Epic("Test epic1", "Description1", 21);
         this.manager.createEpic(epic);
         Subtask subtask = new Subtask("Test subtask", "Desc", 22, Status.NEW, epic.getId());
         this.manager.createSubtask(subtask);
         Subtask savedSubtask = this.manager.getSubtaskById(subtask.getId());
         Assertions.assertNotNull(savedSubtask);
-        Assertions.assertEquals(subtask, savedSubtask);
+        assertEquals(subtask, savedSubtask);
     }
 
     @Test
     void deleteAllTasks() {
         this.manager.clearAllTasks();
         List<Task> tasks = this.manager.getAllTasks();
-        Assertions.assertEquals(0, tasks.size());
+        assertEquals(0, tasks.size());
     }
 
     @Test
     void deleteAllEpics() {
         this.manager.clearAllEpics();
         List<Epic> epics = this.manager.getAllEpics();
-        Assertions.assertEquals(0, epics.size());
+        assertEquals(0, epics.size());
     }
 
     @Test
     void deleteAllSubtasks() {
         this.manager.clearAllSubtasks();
         List<Subtask> subtasks = this.manager.getAllSubtasks();
-        Assertions.assertEquals(0, subtasks.size());
+        assertEquals(0, subtasks.size());
     }
 
     @Test
-    void taskShouldBeRemovedFromHistoryWhenDeleted() {
+    void taskShouldBeRemovedFromHistoryWhenDeleted() throws Exception {
         Task task = new Task("Test task", "Description", 20, Status.NEW);
         manager.createTask(task);
 
@@ -155,5 +158,122 @@ class TaskManagerTest {
 
         manager.deleteTask(task.getId());
         Assertions.assertFalse(manager.getHistory().contains(task), "Задача не была удалена из истории");
+    }
+
+    // Новые Тесты:
+
+    // Статус эпика: все NEW
+    @Test
+    void epicStatus_allNew() throws Exception {
+        Epic e = manager.createEpic(new Epic("E", "ED", 0));
+        manager.createSubtask(new Subtask("S1", "SD1", 0, Status.NEW, e.getId()));
+        manager.createSubtask(new Subtask("S2", "SD2", 0, Status.NEW, e.getId()));
+        assertEquals(Status.NEW, manager.getEpicById(e.getId()).getStatus());
+    }
+
+    // Статус эпика: все DONE
+    @Test
+    void epicStatus_allDone() throws Exception {
+        Epic e = manager.createEpic(new Epic("E", "ED", 0));
+        manager.createSubtask(new Subtask("S1", "SD1", 0, Status.DONE, e.getId()));
+        manager.createSubtask(new Subtask("S2", "SD2", 0, Status.DONE, e.getId()));
+        assertEquals(Status.DONE, manager.getEpicById(e.getId()).getStatus());
+    }
+
+    // Статус эпика: NEW + DONE -> IN_PROGRESS
+    @Test
+    void epicStatus_mixNewDone() throws Exception {
+        Epic e = manager.createEpic(new Epic("E", "ED", 0));
+        manager.createSubtask(new Subtask("S1", "SD1", 0, Status.NEW, e.getId()));
+        manager.createSubtask(new Subtask("S2", "SD2", 0, Status.DONE, e.getId()));
+        assertEquals(Status.IN_PROGRESS, manager.getEpicById(e.getId()).getStatus());
+    }
+
+    // Статус эпика: есть IN_PROGRESS -> IN_PROGRESS
+    @Test
+    void epicStatus_inProgressPresent() throws Exception {
+        Epic e = manager.createEpic(new Epic("E", "ED", 0));
+        manager.createSubtask(new Subtask("S1", "SD1", 0, Status.IN_PROGRESS, e.getId()));
+        manager.createSubtask(new Subtask("S2", "SD2", 0, Status.NEW, e.getId()));
+        assertEquals(Status.IN_PROGRESS, manager.getEpicById(e.getId()).getStatus());
+    }
+
+    // сортировка по startTime + исключение задач без startTime
+    @Test
+    void prioritizedTasks_sortedByStart_excludesNullStart() throws Exception {
+        LocalDateTime base = LocalDateTime.now().withSecond(0).withNano(0);
+
+        Task t1 = new Task("PR1", "D", 0, Status.NEW);
+        t1.setStartTime(base.plusHours(2));
+        t1.setDuration(Duration.ofMinutes(30));
+        manager.createTask(t1);
+
+        Task t2 = new Task("PR2", "D", 0, Status.NEW);
+        t2.setStartTime(base.plusHours(1));
+        t2.setDuration(Duration.ofMinutes(30));
+        manager.createTask(t2);
+
+        Task noTime = new Task("PR3", "D", 0, Status.NEW); // без времени
+        manager.createTask(noTime);
+
+        List<Task> prio = manager.getPrioritizedTasks();
+        assertEquals(2, prio.size());
+        assertEquals(t2.getId(), prio.get(0).getId());
+        assertEquals(t1.getId(), prio.get(1).getId());
+    }
+
+    @Test
+    void intersection_overlapping_throws() throws Exception {
+        LocalDateTime base = LocalDateTime.now().withSecond(0).withNano(0);
+
+        Task a = new Task("A", "D", 0, Status.NEW);
+        a.setStartTime(base);
+        a.setDuration(Duration.ofMinutes(60)); // [t .. t+60)
+        manager.createTask(a);
+
+        Task b = new Task("B", "D", 0, Status.NEW);
+        b.setStartTime(base.plusMinutes(30));  // [t+30 .. t+90)
+        b.setDuration(Duration.ofMinutes(60));
+
+        assertThrows(TimeIntersectionException.class, () -> manager.createTask(b));
+    }
+
+    @Test
+    void intersection_touching_allowed() throws Exception {
+        LocalDateTime base = LocalDateTime.now().withSecond(0).withNano(0);
+
+        Task a = new Task("A", "D", 0, Status.NEW);
+        a.setStartTime(base);
+        a.setDuration(Duration.ofMinutes(60)); // [t .. t+60)
+        manager.createTask(a);
+
+        Task b = new Task("B", "D", 0, Status.NEW);
+        b.setStartTime(base.plusMinutes(60));  // [t+60 .. t+120)
+        b.setDuration(Duration.ofMinutes(60));
+
+        assertDoesNotThrow(() -> manager.createTask(b));
+    }
+
+    @Test
+    void epicTime_aggregatesFromSubtasks() throws Exception {
+        Epic e = manager.createEpic(new Epic("Etime", "ED", 0));
+
+        LocalDateTime s1Start = LocalDateTime.now().withSecond(0).withNano(0);
+        LocalDateTime s2Start = s1Start.plusHours(2);
+
+        Subtask s1 = new Subtask("S1", "SD1", 0, Status.NEW, e.getId());
+        s1.setStartTime(s1Start);
+        s1.setDuration(Duration.ofMinutes(90)); // end t+90
+        manager.createSubtask(s1);
+
+        Subtask s2 = new Subtask("S2", "SD2", 0, Status.NEW, e.getId());
+        s2.setStartTime(s2Start);
+        s2.setDuration(Duration.ofMinutes(30)); // end t+150
+        manager.createSubtask(s2);
+
+        Epic actual = manager.getEpicById(e.getId());
+        assertEquals(Duration.ofMinutes(120), actual.getDuration());
+        assertEquals(s1Start, actual.getStartTime());
+        assertEquals(s2Start.plusMinutes(30), actual.getEndTime());
     }
 }
